--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,7 @@
 @import "abstracts/base";
 @import "abstracts/mixins";
 @import "abstracts/variables";
-//// VARIABLES ////
+@import "layout/menu";
 
 body {
   @include background;
