--- a/scss/layout/_menu.scss
+++ b/scss/layout/_menu.scss
@@ -22,7 +22,7 @@
     .btn-line {
       //line 1 = rotate
       &:nth-child(1) {
-        transform: rotate(45deg) translate(5px, 5px);
+        transform: rotate(45deg) translate(5px, 5px) scale(1.1);
       }
       //line 2 = hide
       &:nth-child(2) {
@@ -30,8 +30,103 @@
       }
       //line 3 = rotate
       &:nth-child(3) {
-        transform: rotate(-45deg) translate(6.5px, -6px);
+        transform: rotate(-45deg) translate(6.5px, -6px) scale(1.1);
       }
     }
+  }
+}
+
+// Menu Overlay //
+.menu {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  opacity: 0.9;
+  visibility: hidden;
+
+  &.show {
+    visibility: visible;
+  }
+
+  &-branding,
+  &-nav {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
+    float: left;
+    width: 50%;
+    height: 100vh;
+    overflow: hidden;
+  }
+
+  // Nav Side //
+  &-nav {
+    background: darken($primary-color, 5);
+    list-style: none;
+    transform: translate3d(0, -100%, 0);
+    @include easeOut;
+
+    // Slide in from top //
+    &.show {
+      transform: translate3d(0, 0, 0);
+    }
+  }
+
+  // Branding Side //
+  &-branding {
+    background: $primary-color;
+    transform: translate3d(0, 100%, 0);
+    @include easeOut;
+
+    // Slide in from bottom //
+    &.show {
+      transform: translate3d(0, 0, 0);
+    }
+
+    .portrait {
+      width: 25rem;
+      height: 25rem;
+      background: url(../img/portrait.jpg);
+      border-radius: 50%;
+      border: 3px solid $secondary-color;
+    }
+  }
+
+  .nav-item {
+    transform: translate3d(60rem, 0, 0);
+    @include easeOut;
+
+    // Slide in from right //
+    &.show {
+      transform: translate3d(0, 0, 0);
+    }
+
+    &.current > a {
+      color: $secondary-color;
+    }
+  }
+
+  .nav-link {
+    display: inline-block;
+    //position: relative;
+    font-size: 3rem;
+    text-transform: uppercase;
+    padding: 1.3rem 0;
+    font-weight: 400;
+    color: #fff;
+    text-decoration: none;
+    @include easeOut;
+
+    &:hover {
+      color: $secondary-color;
+    }
+  }
+}
+
+// Delay each nav item slide by 0.1s //
+@for $x from 1 through 4 {
+  .nav-item:nth-child(#{$x}) {
+    transition-delay: $x * 0.1s;
   }
 }
