--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,5 +1,6 @@
 $primary-color: #444;
 $secondary-color: #eece1a;
+$tertiary-color: #439db2;
 
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
