--- a/scss/layout/_menu.scss
+++ b/scss/layout/_menu.scss
@@ -119,12 +119,12 @@
     @include easeOut;
 
     &:hover {
-      color: $secondary-color;
+      color: $tertiary-color;
     }
   }
 }
 
-// Delay each nav item slide by 0.1s //
+// Delay each nav item slide by 0.1s  with a for loop//
 @for $x from 1 through 4 {
   .nav-item:nth-child(#{$x}) {
     transition-delay: $x * 0.1s;
