Text color function and about page

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -5,3 +5,5 @@ $tertiary-color: #439db2;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
 $background-opacity: 0.85;
+
+//$primary-color: rgb(53, 4, 4);
