--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,12 +2,11 @@
 @import "abstracts/mixins";
 @import "abstracts/variables";
 @import "layout/menu";
-@import "abstracts/mobile";
 
 body {
   @include background;
   background: $primary-color;
-  color: #fff;
+  color: set-text-color($primary-color);
   height: 100%;
   margin: 0;
   padding: 0;
@@ -50,19 +49,21 @@ header {
 }
 main {
   padding: 4rem;
-  height: 100%;
+  min-height: calc(100vh - 6rem);
 
   .icons {
     margin-top: 1rem;
 
     a {
-      padding: 0.75rem;
+      padding: 0.5rem;
       @include easeOut();
+
       &:hover {
         color: $secondary-color;
       }
     }
   }
+
   &#home {
     overflow: hidden;
     h1 {
@@ -70,3 +71,49 @@ main {
     }
   }
 }
+
+.about-info {
+  display: grid;
+  grid-gap: 3rem;
+  grid-template-areas: "bioimage bio bio" "job1 job2 job3";
+  grid-template-columns: repeat(3, 1fr);
+
+  .bio-image {
+    grid-area: bioimage;
+    margin: auto;
+    border-radius: 50%;
+    border: 3px solid $secondary-color;
+  }
+
+  .bio {
+    grid-area: bio;
+    font-size: 1.6rem;
+  }
+
+  .job {
+    background: lighten($primary-color, 5);
+    padding: 0.8rem;
+    border-bottom: $secondary-color 5px solid;
+  }
+
+  .job-1 {
+    grid-area: job1;
+  }
+  .job-2 {
+    grid-area: job2;
+  }
+  .job-3 {
+    grid-area: job3;
+  }
+}
+
+/// Footer ///
+#main-footer {
+  text-align: center;
+  padding: 1.6rem;
+  background: darken($primary-color, 10);
+  color: set-text-color($primary-color);
+  height: 6rem;
+}
+
+@import "abstracts/mobile";
