--- a/scss/layout/_menu.scss
+++ b/scss/layout/_menu.scss
@@ -11,7 +11,7 @@
     width: 2.8rem;
     height: 3px;
     margin: 0 0 5px 0;
-    background: #fff;
+    background: set-text-color($primary-color);
     @include easeOut;
   }
 
@@ -114,7 +114,7 @@
     text-transform: uppercase;
     padding: 1.3rem 0;
     font-weight: 400;
-    color: #fff;
+    color: set-text-color($primary-color);
     text-decoration: none;
     @include easeOut;
 
