--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -1,5 +1,5 @@
 @mixin easeOut {
-  transition: all 0.65s ease-out;
+  transition: all 0.5s ease-out;
 }
 
 @mixin background {
@@ -28,7 +28,8 @@
   @if (lightness($color) > 40) {
     @return #000;
   } @else {
-    @return #fff;
+    @return #deffe3;
+    //@return #e9eeff;
   }
 }
 
