--- a/scss/abstracts/_mobile.scss
+++ b/scss/abstracts/_mobile.scss
@@ -1,9 +1,12 @@
 // Widescreens //
 @include mediaXlg {
+  grid-template-columns: repeat(4, 1fr);
+  //grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
 }
 
 // Desktops and Laptops //
 @include mediaLg {
+  grid-template-columns: repeat(3, 1fr);
 }
 
 // Tablets & Small Laptops //
@@ -45,22 +48,29 @@
       height: 15rem;
     }
   }
+  main#about h1 {
+    font-size: 6.5rem;
+    margin-top: 8vh;
+  }
 
   .about-info {
     grid-template-areas:
-      "bioimage"
-      "bio"
-      "job1"
-      "job2"
-      "job3";
-
+      'bioimage'
+      'bio'
+      'job1'
+      'job2'
+      'job3';
     grid-template-columns: 1fr;
   }
+  grid-template-columns: repeat(2, 1fr);
 }
 
 // Smartphones //
 @include mediaSm {
   main#home h1 {
     margin-top: 10vh;
+  }
+  .projects {
+    grid-template-columns: 1fr;
   }
 }
