--- a/scss/layout/_menu.scss
+++ b/scss/layout/_menu.scss
@@ -20,15 +20,15 @@
     transform: rotate(180deg);
 
     .btn-line {
-      //line 1 = rotate
+      // line 1 = rotate
       &:nth-child(1) {
         transform: rotate(45deg) translate(5px, 5px) scale(1.1);
       }
-      //line 2 = hide
+      // line 2 = hide
       &:nth-child(2) {
         opacity: 0;
       }
-      //line 3 = rotate
+      // line 3 = rotate
       &:nth-child(3) {
         transform: rotate(-45deg) translate(6.5px, -6px) scale(1.1);
       }
@@ -41,7 +41,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  opacity: 0.9;
+  opacity: 0.99;
   visibility: hidden;
 
   &.show {
@@ -62,7 +62,7 @@
 
   // Nav Side //
   &-nav {
-    background: darken($primary-color, 5);
+    background: darken($primary-color, 2);
     list-style: none;
     transform: translate3d(0, -100%, 0);
     @include easeOut;
@@ -77,6 +77,7 @@
   &-branding {
     background: $primary-color;
     transform: translate3d(0, 100%, 0);
+    border-right: 5px solid darken($primary-color, 3);
     @include easeOut;
 
     // Slide in from bottom //
@@ -103,23 +104,23 @@
     }
 
     &.current > a {
-      color: $secondary-color;
+      color: $tertiary-color;
     }
   }
 
   .nav-link {
     display: inline-block;
-    //position: relative;
+    position: relative;
     font-size: 3rem;
     text-transform: uppercase;
     padding: 1.3rem 0;
-    font-weight: 400;
+    font-weight: 300;
     color: set-text-color($primary-color);
     text-decoration: none;
     @include easeOut;
 
     &:hover {
-      color: $tertiary-color;
+      color: $secondary-color;
     }
   }
 }
