--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,8 @@
-@import "abstracts/base";
-@import "abstracts/mixins";
-@import "abstracts/variables";
-@import "layout/menu";
+@import 'abstracts/base';
+@import 'abstracts/mixins';
+@import 'abstracts/variables';
+@import 'components/buttons';
+@import 'layout/menu';
 
 body {
   @include background;
@@ -9,32 +10,32 @@ body {
   color: set-text-color($primary-color);
   height: 100%;
   margin: 0;
-  padding: 0;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: $default-fontsize;
+  font-weight: 300;
   line-height: 1.5;
 }
 
 /// HEADINGS ///
 h1,
 h2,
-h3 {
+h3,
+h4 {
   margin: 0;
-  font-weight: 400;
+  font-weight: 300;
 
   &.lg-heading {
-    font-size: 8rem;
+    font-size: 6rem;
   }
 
   &.sm-heading {
-    font-size: 1.6rem;
-    margin-bottom: 2rem;
     padding: 0.2rem 1rem;
     background: rgba(lighten($primary-color, 2), 0.5);
   }
 }
 
 a {
-  color: #fff;
+  color: #deffe3;
   text-decoration: none;
 }
 
@@ -47,19 +48,21 @@ header {
 .text-secondary {
   color: $secondary-color;
 }
+
 main {
-  padding: 4rem;
+  padding: 8rem;
   min-height: calc(100vh - 6rem);
 
   .icons {
     margin-top: 1rem;
+    color: #deffe3;
 
     a {
-      padding: 0.5rem;
-      @include easeOut();
+      padding: 0.8rem;
+      @include easeOut;
 
       &:hover {
-        color: $secondary-color;
+        color: darken($secondary-color, 7);
       }
     }
   }
@@ -74,8 +77,8 @@ main {
 
 .about-info {
   display: grid;
-  grid-gap: 3rem;
-  grid-template-areas: "bioimage bio bio" "job1 job2 job3";
+  grid-gap: 4rem;
+  grid-template-areas: 'bioimage bio bio' 'job1 job2 job3';
   grid-template-columns: repeat(3, 1fr);
 
   .bio-image {
@@ -83,17 +86,34 @@ main {
     margin: auto;
     border-radius: 50%;
     border: 3px solid $secondary-color;
+    margin-bottom: $mb-small;
   }
 
   .bio {
     grid-area: bio;
-    font-size: 1.6rem;
+    font-size: 2rem;
+
+    p {
+      font-size: $default-fontsize;
+    }
+
+    h3 {
+      padding-bottom: 1rem;
+    }
   }
 
   .job {
-    background: lighten($primary-color, 5);
-    padding: 0.8rem;
-    border-bottom: $secondary-color 5px solid;
+    background: darken($primary-color, 2);
+    padding: 1.5rem 2rem;
+    border-bottom: $secondary-color 2px solid;
+
+    h3 {
+      margin-bottom: 0.5rem;
+    }
+
+    h4 {
+      margin-bottom: 0.5rem;
+    }
   }
 
   .job-1 {
@@ -107,13 +127,32 @@ main {
   }
 }
 
+/// Work/ Projects ///
+.projects {
+  display: grid;
+  //grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(225px, 1fr));
+  grid-gap: 2rem;
+
+  img {
+    width: 100%;
+    border: 3px solid #deffe3;
+    @include easeOut;
+
+    &:hover {
+      opacity: 0.2;
+      border-color: $secondary-color;
+    }
+  }
+}
+
 /// Footer ///
 #main-footer {
   text-align: center;
   padding: 1.6rem;
-  background: darken($primary-color, 10);
+  background: darken($primary-color, 6);
   color: set-text-color($primary-color);
   height: 6rem;
 }
 
-@import "abstracts/mobile";
+@import 'abstracts/mobile';
