--- a/scss/abstracts/_mobile.scss
+++ b/scss/abstracts/_mobile.scss
@@ -1,12 +1,11 @@
 // Widescreens //
 @include mediaXlg {
-  grid-template-columns: repeat(4, 1fr);
-  //grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  //grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 }
 
 // Desktops and Laptops //
 @include mediaLg {
-  grid-template-columns: repeat(3, 1fr);
 }
 
 // Tablets & Small Laptops //
@@ -19,58 +18,63 @@
       line-height: 1;
       margin-bottom: 1rem;
     }
-  }
+    .sm-heading {
+      font-size: 2.5rem;
+    }
 
-  ul.menu-nav,
-  div.menu-branding {
-    float: none;
-    width: 100%;
-    min-height: 0;
+    ul.menu-nav,
+    div.menu-branding {
+      float: none;
+      width: 100%;
+      min-height: 0;
 
-    &.show {
-      transform: translate3d(0, 0, 0);
+      &.show {
+        transform: translate3d(0, 0, 0);
+      }
+    }
+
+    .menu-nav {
+      height: 75vh;
+      transform: translate3d(100%, 0, 0);
+      font-size: 2.4rem;
+    }
+
+    .menu-branding {
+      height: 25vh;
+      transform: translate3d(-100%, 0, 0);
+
+      .portrait {
+        background: url(../img/portrait_small.jpg);
+        width: 15rem;
+        height: 15rem;
+      }
+    }
+    main#about h1 {
+      font-size: 6.5rem;
+      margin-top: 8vh;
+    }
+
+    .about-info {
+      grid-template-areas:
+        'bioimage'
+        'bio'
+        'job1'
+        'job2'
+        'job3';
+      grid-template-columns: 1fr;
     }
   }
 
-  .menu-nav {
-    height: 75vh;
-    transform: translate3d(100%, 0, 0);
-    font-size: 2.4rem;
-  }
-
-  .menu-branding {
-    height: 25vh;
-    transform: translate3d(-100%, 0, 0);
-
-    .portrait {
-      background: url(../img/portrait_small.jpg);
-      width: 15rem;
-      height: 15rem;
+  // Smartphones //
+  @include mediaSm {
+    main#home h1 {
+      margin-top: 10vh;
     }
-  }
-  main#about h1 {
-    font-size: 6.5rem;
-    margin-top: 8vh;
-  }
-
-  .about-info {
-    grid-template-areas:
-      'bioimage'
-      'bio'
-      'job1'
-      'job2'
-      'job3';
-    grid-template-columns: 1fr;
-  }
-  grid-template-columns: repeat(2, 1fr);
-}
-
-// Smartphones //
-@include mediaSm {
-  main#home h1 {
-    margin-top: 10vh;
-  }
-  .projects {
-    grid-template-columns: 1fr;
+    main#home h1,
+    main#about h1,
+    main#work h1,
+    main#contact h1 {
+      font-size: 5rem;
+    }
   }
 }
