--- a/scss/main.scss
+++ b/scss/main.scss
@@ -30,12 +30,12 @@ h4 {
 
   &.sm-heading {
     padding: 0.2rem 1rem;
-    background: rgba(lighten($primary-color, 2), 0.5);
+    background: rgba(lighten($primary-color, 4), 0.5);
   }
 }
 
 a {
-  color: #deffe3;
+  color: $secondary-color-2;
   text-decoration: none;
 }
 
@@ -50,7 +50,7 @@ header {
 }
 
 main {
-  padding: 8rem;
+  padding: 10rem;
   min-height: calc(100vh - 6rem);
 
   .icons {
@@ -77,13 +77,14 @@ main {
 
 .about-info {
   display: grid;
-  grid-gap: 4rem;
+  grid-gap: 6rem;
   grid-template-areas: 'bioimage bio bio' 'job1 job2 job3';
   grid-template-columns: repeat(3, 1fr);
 
   .bio-image {
     grid-area: bioimage;
-    margin: auto;
+    justify-self: center;
+    align-self: center;
     border-radius: 50%;
     border: 3px solid $secondary-color;
     margin-bottom: $mb-small;
@@ -91,19 +92,23 @@ main {
 
   .bio {
     grid-area: bio;
-    font-size: 2rem;
+    align-self: flex-start;
+    justify-self: center;
+
+    width: clamp(50ch, 100%, 70ch);
 
     p {
       font-size: $default-fontsize;
     }
 
     h3 {
+      font-size: 2.5rem;
       padding-bottom: 1rem;
     }
   }
 
   .job {
-    background: darken($primary-color, 2);
+    background: darken($primary-color, 5);
     padding: 1.5rem 2rem;
     border-bottom: $secondary-color 2px solid;
 
@@ -130,27 +135,53 @@ main {
 /// Work/ Projects ///
 .projects {
   display: grid;
-  //grid-template-columns: repeat(3, 1fr);
-  grid-template-columns: repeat(auto-fit, minmax(225px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
   grid-gap: 2rem;
 
-  img {
-    width: 100%;
-    border: 3px solid #deffe3;
-    @include easeOut;
+  .item {
+    img {
+      width: 100%;
+      border: 3px solid $secondary-color-2;
 
-    &:hover {
-      opacity: 0.2;
-      border-color: $secondary-color;
+      @include easeOut;
+      &:hover {
+        opacity: 0.5;
+        border-color: $secondary-color;
+      }
     }
   }
 }
 
+/// Contact Page ///
+.boxes {
+  display: flex;
+  grid-gap: 3rem;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 1rem;
+
+  div {
+    font-size: 2rem;
+    justify-self: center;
+    padding: 0.65rem 1.5rem;
+    margin-bottom: 2rem;
+    line-height: 1.4;
+    border: 2px solid $secondary-color-2;
+    @include easeOut;
+
+    &:hover {
+      padding: 1.25rem 2.25rem;
+      background-color: darken($primary-color, 8);
+      border-color: $secondary-color;
+    }
+  }
+}
 /// Footer ///
 #main-footer {
   text-align: center;
   padding: 1.6rem;
-  background: darken($primary-color, 6);
+  background: darken($primary-color, 18);
   color: set-text-color($primary-color);
   height: 6rem;
 }
