--- a/scss/layout/_menu.scss
+++ b/scss/layout/_menu.scss
@@ -88,7 +88,7 @@
     .portrait {
       width: 25rem;
       height: 25rem;
-      background: url(../img/portrait.jpg);
+      background: url(../img/black panther.jpg);
       border-radius: 50%;
       border: 3px solid $secondary-color;
     }
