--- a/scss/abstracts/_mobile.scss
+++ b/scss/abstracts/_mobile.scss
@@ -44,7 +44,7 @@
       transform: translate3d(-100%, 0, 0);
 
       .portrait {
-        background: url(../img/black panther_small.jpg);
+        background: url(../img/panther_small.jpg);
         width: 15rem;
         height: 15rem;
       }
