--- a/css/main.css
+++ b/css/main.css
@@ -35,9 +35,7 @@ html {
   margin-bottom: 6rem;
 }
 
-.btn,
-.btn-dark,
-.btn-light {
+.btn, .btn-dark, .btn-light {
   display: block;
   padding: 0.5rem 1.3rem;
   border: 0;
@@ -45,9 +43,7 @@ html {
   align-self: center;
 }
 
-.btn:hover,
-.btn-dark:hover,
-.btn-light:hover {
+.btn:hover, .btn-dark:hover, .btn-light:hover {
   font-weight: normal;
   background: #ffa439;
   color: #000;
@@ -114,8 +110,7 @@ html {
   visibility: visible;
 }
 
-.menu-branding,
-.menu-nav {
+.menu-branding, .menu-nav {
   display: flex;
   flex-flow: column wrap;
   align-items: center;
@@ -376,6 +371,7 @@ main#home h1 {
   justify-content: space-evenly;
   align-items: center;
   margin-top: 1rem;
+  transition: all 0.5s ease-out;
 }
 
 .boxes div {
@@ -385,7 +381,6 @@ main#home h1 {
   margin-bottom: 2rem;
   line-height: 1.4;
   border: 2px solid #deffe3;
-  transition: all 0.5s ease-out;
 }
 
 .boxes div:hover {
@@ -447,12 +442,7 @@ main#home h1 {
     margin-top: 8vh;
   }
   main .about-info {
-    grid-template-areas:
-      'bioimage'
-      'bio'
-      'job1'
-      'job2'
-      'job3';
+    grid-template-areas: 'bioimage' 'bio' 'job1' 'job2' 'job3';
     grid-template-columns: 1fr;
   }
 }
