--- a/css/main.css
+++ b/css/main.css
@@ -3,53 +3,67 @@
 *::after {
   margin: 0;
   padding: 0;
-  box-sizing: inherit; }
+  box-sizing: inherit;
+}
 
 html {
   box-sizing: border-box;
-  font-size: 62.5%; }
+  font-size: 62.5%;
+}
 
 .mb-small {
-  margin-bottom: 2rem; }
+  margin-bottom: 2rem;
+}
 
 .mb-medium {
-  margin-bottom: 4rem; }
+  margin-bottom: 4rem;
+}
 
 .mb-large {
-  margin-bottom: 6rem; }
+  margin-bottom: 6rem;
+}
 
 .mt-small {
-  margin-bottom: 2rem; }
+  margin-bottom: 2rem;
+}
 
 .mt-medium {
-  margin-bottom: 4rem; }
+  margin-bottom: 4rem;
+}
 
 .mt-large {
-  margin-bottom: 6rem; }
+  margin-bottom: 6rem;
+}
 
 .btn, .btn-dark, .btn-light {
   display: block;
   padding: 0.5rem 1.3rem;
   border: 0;
   margin: 0 0 0.5rem 0;
-  align-self: center; }
-  .btn:hover, .btn-dark:hover, .btn-light:hover {
-    font-weight: normal;
-    background: #ffa439;
-    color: #000;
-    transition: all 0.5s ease-out; }
+  align-self: center;
+}
+
+.btn:hover, .btn-dark:hover, .btn-light:hover {
+  font-weight: normal;
+  background: #ffa439;
+  color: #000;
+  transition: all 0.5s ease-out;
+}
 
 .fa-eye,
 .fa-github {
-  margin-right: 0.5rem; }
+  margin-right: 0.5rem;
+}
 
 .btn-dark {
   background: #1d2d37;
-  color: #deffe3; }
+  color: #deffe3;
+}
 
 .btn-light {
   background: #4a718a;
-  color: #deffe3; }
+  color: #deffe3;
+}
 
 .menu-btn {
   position: absolute;
@@ -57,90 +71,130 @@ html {
   top: 3.5rem;
   right: 3.5rem;
   cursor: pointer;
-  transition: all 0.5s ease-out; }
-  .menu-btn .btn-line {
-    width: 2.8rem;
-    height: 3px;
-    margin: 0 0 5px 0;
-    background: #deffe3;
-    transition: all 0.5s ease-out; }
-  .menu-btn.close {
-    transform: rotate(180deg); }
-    .menu-btn.close .btn-line:nth-child(1) {
-      transform: rotate(45deg) translate(5px, 5px) scale(1.1); }
-    .menu-btn.close .btn-line:nth-child(2) {
-      opacity: 0; }
-    .menu-btn.close .btn-line:nth-child(3) {
-      transform: rotate(-45deg) translate(6.5px, -6px) scale(1.1); }
+  transition: all 0.5s ease-out;
+}
+
+.menu-btn .btn-line {
+  width: 2.8rem;
+  height: 3px;
+  margin: 0 0 5px 0;
+  background: #deffe3;
+  transition: all 0.5s ease-out;
+}
+
+.menu-btn.close {
+  transform: rotate(180deg);
+}
+
+.menu-btn.close .btn-line:nth-child(1) {
+  transform: rotate(45deg) translate(5px, 5px) scale(1.1);
+}
+
+.menu-btn.close .btn-line:nth-child(2) {
+  opacity: 0;
+}
+
+.menu-btn.close .btn-line:nth-child(3) {
+  transform: rotate(-45deg) translate(6.5px, -6px) scale(1.1);
+}
 
 .menu {
   position: fixed;
   top: 0;
   width: 100%;
   opacity: 0.99;
-  visibility: hidden; }
-  .menu.show {
-    visibility: visible; }
-  .menu-branding, .menu-nav {
-    display: flex;
-    flex-flow: column wrap;
-    align-items: center;
-    justify-content: center;
-    float: left;
-    width: 50%;
-    height: 100vh;
-    overflow: hidden; }
-  .menu-nav {
-    background: #283d4b;
-    list-style: none;
-    transform: translate3d(0, -100%, 0);
-    transition: all 0.5s ease-out; }
-    .menu-nav.show {
-      transform: translate3d(0, 0, 0); }
-  .menu-branding {
-    background: #2f4858;
-    transform: translate3d(0, 100%, 0);
-    border-right: 5px solid #263a47;
-    transition: all 0.5s ease-out; }
-    .menu-branding.show {
-      transform: translate3d(0, 0, 0); }
-    .menu-branding .portrait {
-      width: 25rem;
-      height: 25rem;
-      background: url(../img/panther.jpg);
-      border-radius: 50%;
-      border: 3px solid #d27100; }
-  .menu .nav-item {
-    transform: translate3d(60rem, 0, 0);
-    transition: all 0.5s ease-out; }
-    .menu .nav-item.show {
-      transform: translate3d(0, 0, 0); }
-    .menu .nav-item.current > a {
-      color: #439db2; }
-  .menu .nav-link {
-    display: inline-block;
-    position: relative;
-    font-size: 3rem;
-    text-transform: uppercase;
-    padding: 1.1rem 0;
-    font-weight: 300;
-    color: #deffe3;
-    text-decoration: none;
-    transition: all 0.5s ease-out; }
-    .menu .nav-link:hover {
-      color: #d27100; }
+  visibility: hidden;
+}
+
+.menu.show {
+  visibility: visible;
+}
+
+.menu-branding, .menu-nav {
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  justify-content: center;
+  float: left;
+  width: 50%;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.menu-nav {
+  background: #283d4b;
+  list-style: none;
+  transform: translate3d(0, -100%, 0);
+  transition: all 0.5s ease-out;
+}
+
+.menu-nav.show {
+  transform: translate3d(0, 0, 0);
+}
+
+.menu-branding {
+  background: #2f4858;
+  transform: translate3d(0, 100%, 0);
+  border-right: 5px solid #263a47;
+  transition: all 0.5s ease-out;
+}
+
+.menu-branding.show {
+  transform: translate3d(0, 0, 0);
+}
+
+.menu-branding .portrait {
+  width: 25rem;
+  height: 25rem;
+  background: url(../img/panther.jpg);
+  border-radius: 50%;
+  border: 3px solid #d27100;
+}
+
+.menu .nav-item {
+  transform: translate3d(60rem, 0, 0);
+  transition: all 0.5s ease-out;
+}
+
+.menu .nav-item.show {
+  transform: translate3d(0, 0, 0);
+}
+
+.menu .nav-item.current > a {
+  color: #439db2;
+}
+
+.menu .nav-link {
+  display: inline-block;
+  position: relative;
+  font-size: 3rem;
+  text-transform: uppercase;
+  padding: 1.1rem 0;
+  font-weight: 300;
+  color: #deffe3;
+  text-decoration: none;
+  transition: all 0.5s ease-out;
+}
+
+.menu .nav-link:hover {
+  color: #d27100;
+}
 
 .nav-item:nth-child(1) {
-  transition-delay: 0.1s; }
+  transition-delay: 0.1s;
+}
 
 .nav-item:nth-child(2) {
-  transition-delay: 0.2s; }
+  transition-delay: 0.2s;
+}
 
 .nav-item:nth-child(3) {
-  transition-delay: 0.3s; }
+  transition-delay: 0.3s;
+}
 
 .nav-item:nth-child(4) {
-  transition-delay: 0.4s; }
+  transition-delay: 0.4s;
+}
 
 body {
   background: #2f4858;
@@ -150,115 +204,165 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1.6rem;
   font-weight: 300;
-  line-height: 1.5; }
-  body#bg-img {
-    background: url(../img/background.jpg);
-    background-attachment: fixed;
-    background-size: cover; }
-    body#bg-img:after {
-      content: '';
-      position: absolute;
-      top: 0;
-      right: 0;
-      width: 100%;
-      height: 100%;
-      z-index: -1;
-      background: rgba(47, 72, 88, 0.95); }
+  line-height: 1.5;
+}
+
+body#bg-img {
+  background: url(../img/background.jpg);
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+body#bg-img:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background: rgba(47, 72, 88, 0.95);
+}
 
 h1,
 h2,
 h3,
 h4 {
   margin: 0;
-  font-weight: 300; }
-  h1.lg-heading,
-  h2.lg-heading,
-  h3.lg-heading,
-  h4.lg-heading {
-    font-size: 6rem; }
-  h1.sm-heading,
-  h2.sm-heading,
-  h3.sm-heading,
-  h4.sm-heading {
-    padding: 0.2rem 1rem;
-    background: rgba(54, 83, 101, 0.5); }
+  font-weight: 300;
+}
+
+h1.lg-heading,
+h2.lg-heading,
+h3.lg-heading,
+h4.lg-heading {
+  font-size: 6rem;
+}
+
+h1.sm-heading,
+h2.sm-heading,
+h3.sm-heading,
+h4.sm-heading {
+  padding: 0.2rem 1rem;
+  background: rgba(54, 83, 101, 0.5);
+}
 
 a {
   color: #deffe3;
-  text-decoration: none; }
+  text-decoration: none;
+}
 
 header {
   position: fixed;
   z-index: 2;
-  width: 100%; }
+  width: 100%;
+}
 
 .text-secondary {
-  color: #d27100; }
+  color: #d27100;
+}
 
 main {
   padding: 10rem;
-  min-height: calc(100vh - 6rem); }
-  main .icons {
-    margin-top: 1rem;
-    color: #deffe3; }
-    main .icons a {
-      padding: 0.8rem;
-      transition: all 0.5s ease-out; }
-      main .icons a:hover {
-        color: #ae5e00; }
-  main#home {
-    overflow: hidden; }
-    main#home h1 {
-      margin-top: 20vh; }
+  min-height: calc(100vh - 6rem);
+}
+
+main .icons {
+  margin-top: 1rem;
+  color: #deffe3;
+}
+
+main .icons a {
+  padding: 0.8rem;
+  transition: all 0.5s ease-out;
+}
+
+main .icons a:hover {
+  color: #ae5e00;
+}
+
+main#home {
+  overflow: hidden;
+}
+
+main#home h1 {
+  margin-top: 20vh;
+}
 
 .about-info {
   display: grid;
   grid-gap: 6rem;
   grid-template-areas: 'bioimage bio bio' 'job1 job2 job3';
-  grid-template-columns: repeat(3, 1fr); }
-  .about-info .bio-image {
-    grid-area: bioimage;
-    justify-self: center;
-    align-self: center;
-    border-radius: 50%;
-    border: 3px solid #d27100;
-    margin-bottom: 2rem; }
-  .about-info .bio {
-    grid-area: bio;
-    align-self: flex-start;
-    justify-self: center;
-    width: clamp(50ch, 100%, 70ch); }
-    .about-info .bio p {
-      font-size: 1.6rem; }
-    .about-info .bio h3 {
-      font-size: 2.5rem;
-      padding-bottom: 1rem; }
-  .about-info .job {
-    background: #263a47;
-    padding: 1.5rem 2rem;
-    border-bottom: #d27100 2px solid; }
-    .about-info .job h3 {
-      margin-bottom: 0.5rem; }
-    .about-info .job h4 {
-      margin-bottom: 0.5rem; }
-  .about-info .job-1 {
-    grid-area: job1; }
-  .about-info .job-2 {
-    grid-area: job2; }
-  .about-info .job-3 {
-    grid-area: job3; }
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.about-info .bio-image {
+  grid-area: bioimage;
+  justify-self: center;
+  align-self: center;
+  border-radius: 50%;
+  border: 3px solid #d27100;
+  margin-bottom: 2rem;
+}
+
+.about-info .bio {
+  grid-area: bio;
+  align-self: flex-start;
+  justify-self: center;
+  width: clamp(50ch, 100%, 70ch);
+}
+
+.about-info .bio p {
+  font-size: 1.6rem;
+}
+
+.about-info .bio h3 {
+  font-size: 2.5rem;
+  padding-bottom: 1rem;
+}
+
+.about-info .job {
+  background: #263a47;
+  padding: 1.5rem 2rem;
+  border-bottom: #d27100 2px solid;
+}
+
+.about-info .job h3 {
+  margin-bottom: 0.5rem;
+}
+
+.about-info .job h4 {
+  margin-bottom: 0.5rem;
+}
+
+.about-info .job-1 {
+  grid-area: job1;
+}
+
+.about-info .job-2 {
+  grid-area: job2;
+}
+
+.about-info .job-3 {
+  grid-area: job3;
+}
 
 .projects {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
-  grid-gap: 2rem; }
-  .projects .item img {
-    width: 100%;
-    border: 3px solid #deffe3;
-    transition: all 0.5s ease-out; }
-    .projects .item img:hover {
-      opacity: 0.5;
-      border-color: #d27100; }
+  grid-gap: 2rem;
+}
+
+.projects .item img {
+  width: 100%;
+  border: 3px solid #deffe3;
+  transition: all 0.5s ease-out;
+}
+
+.projects .item img:hover {
+  opacity: 0.5;
+  border-color: #d27100;
+}
 
 .boxes {
   display: flex;
@@ -267,69 +371,90 @@ main {
   justify-content: space-evenly;
   align-items: center;
   margin-top: 1rem;
-  transition: all 0.5s ease-out; }
-  .boxes div {
-    font-size: 2rem;
-    justify-self: center;
-    padding: 0.65rem 1.5rem;
-    margin-bottom: 2rem;
-    line-height: 1.4;
-    border: 2px solid #deffe3; }
-    .boxes div:hover {
-      padding: 1.25rem 2.25rem;
-      background-color: #21323d;
-      border-color: #d27100; }
+}
+
+.boxes div {
+  font-size: 2rem;
+  justify-self: center;
+  padding: 0.65rem 1.5rem;
+  margin-bottom: 2rem;
+  line-height: 1.4;
+  border: 2px solid #deffe3;
+  transition: all 0.5s ease-out;
+}
+
+.boxes div:hover {
+  padding: 1.25rem 2.25rem;
+  background-color: #21323d;
+  border-color: #d27100;
+}
 
 #main-footer {
   text-align: center;
   padding: 1.6rem;
   background: #0f171c;
   color: #deffe3;
-  height: 6rem; }
+  height: 6rem;
+}
 
 @media screen and (min-width: 1171px) {
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); }
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+}
 
 @media screen and (max-width: 768px) {
   main {
     align-items: center;
-    text-align: center; }
-    main .lg-heading {
-      line-height: 1;
-      margin-bottom: 1rem; }
-    main .sm-heading {
-      font-size: 2.5rem; }
-    main ul.menu-nav,
-    main div.menu-branding {
-      float: none;
-      width: 100%;
-      min-height: 0; }
-      main ul.menu-nav.show,
-      main div.menu-branding.show {
-        transform: translate3d(0, 0, 0); }
-    main .menu-nav {
-      height: 75vh;
-      transform: translate3d(100%, 0, 0);
-      font-size: 2.4rem; }
-    main .menu-branding {
-      height: 25vh;
-      transform: translate3d(-100%, 0, 0); }
-      main .menu-branding .portrait {
-        background: url(../img/panther_small.jpg);
-        width: 15rem;
-        height: 15rem; }
-    main main#about h1 {
-      font-size: 6.5rem;
-      margin-top: 8vh; }
-    main .about-info {
-      grid-template-areas: 'bioimage' 'bio' 'job1' 'job2' 'job3';
-      grid-template-columns: 1fr; } }
+    text-align: center;
+  }
+  main .lg-heading {
+    line-height: 1;
+    margin-bottom: 1rem;
+  }
+  main .sm-heading {
+    font-size: 2.5rem;
+  }
+  main ul.menu-nav,
+  main div.menu-branding {
+    float: none;
+    width: 100%;
+    min-height: 0;
+  }
+  main ul.menu-nav.show,
+  main div.menu-branding.show {
+    transform: translate3d(0, 0, 0);
+  }
+  main .menu-nav {
+    height: 75vh;
+    transform: translate3d(100%, 0, 0);
+    font-size: 2.4rem;
+  }
+  main .menu-branding {
+    height: 25vh;
+    transform: translate3d(-100%, 0, 0);
+  }
+  main .menu-branding .portrait {
+    background: url(../img/panther_small.jpg);
+    width: 15rem;
+    height: 15rem;
+  }
+  main main#about h1 {
+    font-size: 6.5rem;
+    margin-top: 8vh;
+  }
+  main .about-info {
+    grid-template-areas: 'bioimage' 'bio' 'job1' 'job2' 'job3';
+    grid-template-columns: 1fr;
+  }
+}
 
 @media screen and (max-width: 768px) and (max-width: 500px) {
   main#home h1 {
-    margin-top: 10vh; }
+    margin-top: 10vh;
+  }
   main#home h1,
   main#about h1,
   main#work h1,
   main#contact h1 {
-    font-size: 5rem; } }
+    font-size: 5rem;
+  }
+}
