--- a/css/main.css
+++ b/css/main.css
@@ -273,12 +273,12 @@ main {
     padding: 0.65rem 1.5rem;
     margin-bottom: 2rem;
     line-height: 1.4;
-    border: 2px solid #deffe3; }
+    border: 2px solid #deffe3;
+    transition: all 0.5s ease-out; }
     .boxes div:hover {
       padding: 1.25rem 2.25rem;
       background-color: #21323d;
-      border-color: #d27100;
-      transition: all 0.5s ease-out; }
+      border-color: #d27100; }
 
 #main-footer {
   text-align: center;
