--- a/css/main.css
+++ b/css/main.css
@@ -278,8 +278,7 @@ main {
     .boxes div:hover {
       padding: 1.25rem 2.25rem;
       background-color: #21323d;
-      border-color: #d27100;
-      transition: all 0.5s ease-out; }
+      border-color: #d27100; }
 
 #main-footer {
   text-align: center;
