--- a/css/main.css
+++ b/css/main.css
@@ -269,7 +269,7 @@ main {
   margin-top: 1rem; }
   .boxes div {
     font-size: 2rem;
-    align-self: center;
+    text-align: center;
     padding: 0.65rem 1.5rem;
     margin-bottom: 2rem;
     line-height: 1.4;
