--- a/scss/main.scss
+++ b/scss/main.scss
@@ -162,7 +162,7 @@ main {
 
   div {
     font-size: 2rem;
-    justify-self: center;
+    text-align: center;
     padding: 0.65rem 1.5rem;
     margin-bottom: 2rem;
     line-height: 1.4;
@@ -170,9 +170,9 @@ main {
     @include easeOut;
 
     &:hover {
-      padding: 1.25rem 2.25rem;
       background-color: darken($primary-color, 8);
       border-color: $secondary-color;
+      //@include easeOut;
     }
   }
 }
