--- a/scss/main.scss
+++ b/scss/main.scss
@@ -55,7 +55,7 @@ main {
 
   .icons {
     margin-top: 1rem;
-    color: #deffe3;
+    color: $secondary-color-2;
 
     a {
       padding: 0.8rem;
@@ -161,15 +161,16 @@ main {
   margin-top: 1rem;
 
   div {
-    font-size: 2rem;
+    font-size: 1.8rem;
     align-self: center;
-    padding: 0.65rem 1.5rem;
+    padding: 0.75rem 1.5rem;
     margin-bottom: 2rem;
     line-height: 1.4;
     border: 2px solid $secondary-color-2;
     @include easeOut;
 
     &:hover {
+      transform: translateY(-3px);
       background-color: darken($primary-color, 8);
       border-color: $secondary-color;
       //@include easeOut;
