--- a/scss/main.scss
+++ b/scss/main.scss
@@ -25,7 +25,7 @@ h4 {
   font-weight: 300;
 
   &.lg-heading {
-    font-size: 6rem;
+    font-size: 5.5rem;
   }
 
   &.sm-heading {
@@ -87,7 +87,7 @@ main {
     align-self: center;
     border-radius: 50%;
     border: 3px solid $secondary-color;
-    margin-bottom: $mb-small;
+    //margin-bottom: $mb-small;
   }
 
   .bio {
@@ -170,10 +170,9 @@ main {
     @include easeOut;
 
     &:hover {
-      transform: translateY(-3px);
+      transform: translateY(-7px);
       background-color: darken($primary-color, 8);
       border-color: $secondary-color;
-      //@include easeOut;
     }
   }
 }
